T2-171 fix mapping bug